Fix project display on iPhone

--- a/sass/home-page.scss
+++ b/sass/home-page.scss
@@ -551,7 +551,6 @@
 	z-index: 0;
 	display: none;
 	position: relative;
-	overflow: hidden;
 
 	&.enable {
 		z-index: 16;
